--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -7,19 +7,19 @@
         android:id="@+id/group_sections"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/menuitemHome"
+            android:id="@+id/menuItemHome"
             android:icon="@drawable/ic_home"
             android:title="@string/section_home" />
         <item
-            android:id="@+id/menuitemStructures"
+            android:id="@+id/menuItemStructures"
             android:icon="@drawable/ic_structures"
             android:title="@string/section_structures" />
         <item
-            android:id="@+id/menuitemExtras"
+            android:id="@+id/menuItemExtras"
             android:icon="@drawable/ic_extras"
             android:title="@string/section_extras" />
         <item
-            android:id="@+id/menuitemSync"
+            android:id="@+id/menuItemSync"
             android:icon="@drawable/ic_sync"
             android:title="@string/section_sync" />
     </group>
@@ -28,11 +28,11 @@
         android:id="@+id/group_settings"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/menuitemSettings"
+            android:id="@+id/menuItemSettings"
             android:icon="@drawable/ic_settings"
             android:title="@string/section_settings" />
         <item
-            android:id="@+id/menuitemAbout"
+            android:id="@+id/menuItemAbout"
             android:icon="@drawable/ic_info"
             android:title="@string/section_about" />
     </group>
