--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,6 @@
     <color name="color_buildings_selected">#2786EC</color>
     <color name="color_buildings_background">#B3E5FC</color>
 
-    <color name="color_rooms_selected">#E9CB26</color>
-    <color name="color_rooms_background">#FFF9C4</color>
-
+    <color name="color_rooms_selected">#689F38</color>
+    <color name="color_rooms_background">#DCEDC8</color>
 </resources>
