--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,7 @@
 
     <color name="color_employee_detail_background">#B3E5FC</color>
 
-    <color name="color_buildings_selected">#2786EC</color>
-    <color name="color_buildings_background">#B3E5FC</color>
+    <color name="color_buildings_background">#689F38</color>
 
-    <color name="color_rooms_selected">#689F38</color>
     <color name="color_rooms_background">#DCEDC8</color>
 </resources>
