--- a/app/src/main/res/layout/structures_building_group.xml
+++ b/app/src/main/res/layout/structures_building_group.xml
@@ -7,7 +7,7 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/lblListHeader"
+        android:id="@+id/buildingView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
