--- a/app/src/main/res/layout/structures_building_item.xml
+++ b/app/src/main/res/layout/structures_building_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/lblListItem"
+        android:id="@+id/roomView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -16,13 +16,13 @@
         android:textSize="17sp"
         tools:text="ITEM"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/buttonState"
+        app:layout_constraintEnd_toStartOf="@+id/serviceButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonState"
-        android:layout_width="150dp"
+        android:id="@+id/serviceButton"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
