--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -32,5 +32,13 @@
             android:summary="@string/settings_api_url_summary"
             android:title="@string/settings_api_url_title" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="@string/settings_category_scan">
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/settings_scan_beep_id"
+            android:summary="@string/settings_scan_beep_summary"
+            android:title="@string/settings_scan_beep_title" />
+    </PreferenceCategory>
 
 </PreferenceScreen>
