Set screen rotation lock during the scan

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -39,6 +39,11 @@
             android:key="@string/settings_scan_beep_id"
             android:summary="@string/settings_scan_beep_summary"
             android:title="@string/settings_scan_beep_title" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="@string/settings_scan_orientation_lock_id"
+            android:summary="@string/settings_scan_orientation_lock_summary"
+            android:title="@string/settings_scan_orientation_lock_title" />
     </PreferenceCategory>
 
 </PreferenceScreen>
