--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -25,4 +25,8 @@
     <string name="settings_scan_beep_id">scan_beep</string>
     <string name="settings_scan_beep_title">Beep after scan</string>
     <string name="settings_scan_beep_summary">Enable beep after a successfull scan</string>
+
+    <string name="settings_scan_orientation_lock_id">scan_orientation_lock</string>
+    <string name="settings_scan_orientation_lock_title">Lock orientation during scan</string>
+    <string name="settings_scan_orientation_lock_summary">Lock the screen orientation during the scan process</string>
 </resources>
