Added transmissione date to timestamps

--- a/app/src/main/res/layout/scanner_timestamps.xml
+++ b/app/src/main/res/layout/scanner_timestamps.xml
@@ -9,8 +9,9 @@
         android:id="@+id/employeeView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/transmissionImage"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="NAME" />
@@ -48,4 +49,16 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/dateView"
         app:layout_constraintStart_toEndOf="@+id/dateView"
         tools:text="TIME" />
+
+    <ImageView
+        android:id="@+id/transmissionImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/ic_timestamp_transmitted" />
 </android.support.constraint.ConstraintLayout>
