--- a/app/src/main/res/layout/structures_building_group.xml
+++ b/app/src/main/res/layout/structures_building_group.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingEnd="0dp"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:textStyle="bold" />
 
 </LinearLayout>
