--- a/app/src/main/res/layout/main_navigation_header.xml
+++ b/app/src/main/res/layout/main_navigation_header.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="@dimen/default_vertical_margin"
         android:layout_marginBottom="@dimen/default_vertical_margin"
         android:text="@string/app_name"
-        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintBottom_toTopOf="@+id/textAuthor"
         app:layout_constraintStart_toEndOf="@+id/imageView" />
 
@@ -38,6 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/author_email"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/textTitle" />
 
