--- a/app/src/main/res/layout/main_navigation_header.xml
+++ b/app/src/main/res/layout/main_navigation_header.xml
@@ -27,7 +27,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/default_vertical_margin"
-        android:layout_marginBottom="@dimen/default_vertical_margin"
+        android:layout_marginBottom="8dp"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintBottom_toTopOf="@+id/textAuthor"
@@ -35,6 +35,16 @@
 
     <TextView
         android:id="@+id/textAuthor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/author_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        app:layout_constraintBottom_toTopOf="@+id/textAuthorEmail"
+        app:layout_constraintStart_toStartOf="@+id/textTitle" />
+
+    <TextView
+        android:id="@+id/textAuthorEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/author_email"
